Competencia 2/Ejercicio 9/Expr.g4
// Nombre: Gadiel Karim Rios Rojas
// No. Control: 22030161
grammar Expr;

root: expr EOF;

expr: EOF;

CON : 'if';
PAR_IZQ : '(';
PAR_DER : ')';
ID : [a-zA-Z][a-zA-Z0-9_]*;
MAY : '>';
NUM : [0-9]+;

WS : [ \t\r\n]+ -> skip;
